--- a/ansible/inventory/Vagrantfile
+++ b/ansible/inventory/Vagrantfile
@@ -17,16 +17,16 @@ Vagrant.configure("2") do |config|
         end
     end
 
-    config.vm.define "debian16" do | debian16 |
-        debian16.vm.network "private_network", ip: "192.168.0.16"
+    config.vm.define "debian7" do | debian7 |
+        debian7.vm.network "private_network", ip: "192.168.0.7"
         config.vm.provider "virtualbox" do |vb|
             vb.memory = "2048"
             vb.cpus = 2
         end
     end
 
-    config.vm.define "debian26" do | debian26 |
-        debian26.vm.network "private_network", ip: "192.168.0.26"
+    config.vm.define "debian8" do | debian8 |
+        debian8.vm.network "private_network", ip: "192.168.0.8"
         config.vm.provider "virtualbox" do |vb|
             vb.memory = "2048"
             vb.cpus = 2
@@ -44,7 +44,7 @@ Vagrant.configure("2") do |config|
 
         # 安装工具软件
         apt-get update
-        apt-get install -y vim htop net-tools sysstat tree
+        apt-get install -y vim htop net-tools sysstat tree httpie
   SHELL
 end
 
